отправка на допуск к защите

--- a/catalog.html
+++ b/catalog.html
@@ -315,7 +315,7 @@
     </button>
   </section>
 
-  <script src="js/modal.min.js"></script>
+  <script src="js/script.min.js"></script>
 
 </body>
 
