--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           <div class="slide">
             <p class="slide-title">Только ночь,<br>
               только хардкор</p>
-            <p class="slide-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+            <p class="slide-text">Работать днем, как все? Мы против этого.<br>
+              Ближе к полуночи работа только начинается.
             </p>
             <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slider/nerds-index-slide3.png" width="760" height="431"
@@ -213,7 +214,7 @@
     </button>
   </section>
 
-  <script src="js/modal.min.js"></script>
+  <script src="js/script.min.js"></script>
 
 </body>
 
