отправка на защиту

--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
       <p class="field">
         <label class="field-label" for="login-name">Ваше имя:</label>
         <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия"
-          pattern="[A-Za-zА-Яа-яЁё]*?\s[A-Za-zА-Яа-яЁё]*" required>
+          pattern="[A-Za-zА-Яа-яЁё]*?\s[A-Za-zА-Яа-яЁё]*">
       </p>
       <p class="field">
         <label class="field-label" for="login-email">Ваш email:</label>
         <input class="field-input login-email-user" id="login-email" type="email" name="email"
-          placeholder="email@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+          placeholder="email@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
       </p>
       <p class="field field-area">
         <label class="field-label" for="login-text">Текст письма:</label>
